Bug #41024 maria: Server crashes in sysbench OLTP_RW test at lf_hash.c:94
Submitted: 25 Nov 2008 18:46 Modified: 8 Jan 2009 10:40
Reporter: Alexey Stroganov Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Maria storage engine Severity:S1 (Critical)
Version:6.0.8-release OS:Any
Assigned to: Sergei Golubchik CPU Architecture:Any

[25 Nov 2008 18:46] Alexey Stroganov
Description:
The crash with following backtrace was observed in OLTP_RW sysbench test:

Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/data1/qauser/bin64-6.0.8//bin/mysqld --defaults-file=sysbench-maria.cnf --data'.
Program terminated with signal 11, Segmentation fault.
#0  0x00002ade5721f4c5 in pthread_kill () from /lib64/libpthread.so.0
#0  0x00002ade5721f4c5 in pthread_kill () from /lib64/libpthread.so.0
#1  0x000000000064944e in handle_segfault (sig=11) at mysqld.cc:2673
#2  <signal handler called>
#3  lfind (head=0x1df4d58, cs=0xf74e60, hashnr=329608729, key=0x2aab4dd00e58 "d.\003", keylen=<value optimized out>, cursor=0
x4020bc60, pins=0x2aab4d903b80) at lf_hash.c:94
#4  0x0000000000a8fb7f in lf_hash_insert (hash=0x11e6780, pins=0x2aab4d903b80, data=<value optimized out>) at lf_hash.c:160
#5  0x0000000000a11334 in trnman_new_trn (wt=0x1b6d728) at trnman.c:344
#6  0x0000000000a23f1c in ha_maria::external_lock (this=0x1d11af8, thd=0x1b6c300, lock_type=0) at ha_maria.cc:2189
#7  0x000000000073c1aa in handler::ha_external_lock (this=0x40209a88, thd=0x3a054, lock_type=16) at handler.cc:5298
#8  0x00000000006422ab in mysql_lock_tables (thd=0x1b6c300, tables=<value optimized out>, count=<value optimized out>, flags=
<value optimized out>, need_reopen=0x4020be27) at lock.cc:411
#9  0x000000000068d832 in lock_tables (thd=0x1b6c300, tables=0x0, count=<value optimized out>, flags=0, need_reopen=0x4020be2
7) at sql_base.cc:4465
#10 0x0000000000694295 in open_and_lock_tables_derived (thd=0x1b6c300, tables=0x1d5c518, derived=true, flags=0) at sql_base.c
c:4166
#11 0x0000000000656b77 in execute_sqlcom_select (thd=0x1b6c300, all_tables=0x1d5c518) at mysql_priv.h:1620
#12 0x000000000065a9de in mysql_execute_command (thd=0x1b6c300) at sql_parse.cc:2066
#13 0x00000000006d4029 in Prepared_statement::execute (this=0x1d5b000, expanded_query=<value optimized out>, open_cursor=fals
e) at sql_prepare.cc:3578
#14 0x00000000006d6ffc in Prepared_statement::execute_loop (this=0x1d5b000, expanded_query=0x4020d470, open_cursor=false, pac
ket=<value optimized out>, packet_end=<value optimized out>) at sql_prepare.cc:3245
#15 0x00000000006d76a5 in mysql_stmt_execute (thd=0x1b6c300, packet_arg=0x1b6f771 "\001", packet_length=1301292232) at sql_pr
epare.cc:2467
#16 0x000000000065febe in dispatch_command (command=COM_STMT_EXECUTE, thd=0x1b6c300, packet=0x1b6f771 "\001", packet_length=1
5) at sql_parse.cc:960
#17 0x0000000000652a72 in handle_one_connection (arg=<value optimized out>) at sql_connect.cc:1156
#18 0x00002ade5721b193 in start_thread () from /lib64/libpthread.so.0
#19 0x00002ade57a9345d in clone () from /lib64/libc.so.6
#20 0x0000000000000000 in ?? ()

How to repeat:
Instructions and test case will be provided a bit later.
[15 Dec 2008 10:08] Bugs System
Pushed into 6.0.9-alpha  (revid:serg@mysql.com-20081205105151-tqxe1q4g3wqz0mk7) (version source revid:guilhem@mysql.com-20081213204800-0nubni3t4ihn4hv9) (pib:5)
[8 Jan 2009 10:40] MC Brown
Test case failure. No documentation needed.