bug#41024 maria: Server crashes in sysbench OLTP_RW test at lf_hash.c:94 bug#41023 maria: Server asserts in sysbench OLTP_RO test bug#40888 maria: Server crashes in sysbench OLTP_RW test at lf_alloc-pin.c:513 bug#40892 maria: Livelock in sysbench OLTP_RW test bug#40895 maria: Server crashes in sysbench OLTP_RO test at lf_alloc-pin.c:367 bug#40890 maria: Server crashes in sysbench OLTP_RW test at ctype-bin.c:8

Yet another strict aliasing issue